@@ -1,6 +1,7 @@
 Future version (tbd)
  * Require only MODIFY permission on base when updating table with MV (STAR-564)
 Merged from 5.0:
+ * Prevent InaccessibleObjectException when the Leak Detector is traversing objects (CASSANDRA-18708)
  * Add guardrail for vector dimensions (CASSANDRA-18730)
  * Add support for CQL functions on collections, tuples and UDTs (CASSANDRA-17811)
 Merged from 4.0:
